# tidebase

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  docker-compose.yml  llms.txt  package.json  pnpm-lock.yaml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-image.yml
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: main.tsx  styles.css
apps/mcp/: Dockerfile  package.json
apps/mcp/guest/: studio-app.ts
apps/mcp/scripts/: build-guest.mjs
apps/mcp/src/: guestBundle.generated.ts  index.ts  server.ts  tools.ts  ui.ts
apps/server/: Dockerfile  package.json  vitest.config.ts
apps/server/scripts/: brokerDogfood.ts
apps/server/src/: app.ts  context.ts  cron.ts  db.ts  envelope.ts  events.ts  index.ts  lib.ts  migrate.ts  policy.ts  providers.ts  ratelimit.ts  reconciler.ts  ssrf.ts
apps/server/test/: agent-auth-hardening.test.ts  agent-auth-proxy.test.ts  agent-auth.test.ts  auth.test.ts  embed.test.ts  (+20 more)
apps/studio/: package.json
docs/: demo-video-and-brand.md  production.md  testing.md
examples/mcp-gateway/: README.md  package.json
examples/report/: package.json
migrations/: 001_init.sql  002_lifecycle_queues_schedules.sql  003_agent_auth.sql  004_run_grant_tenancy.sql  005_custody_and_abuse_stores.sql  006_resource_path_scope.sql
plugins/tidebase/: .mcp.json
sdk-python/: README.md  pyproject.toml
sdk-python/src/tidebase/: __init__.py  aio.py
sdk-python/tests/: test_integration.py
(+27 files in other folders)
