[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidebase"
version = "0.5.0"
description = "Python SDK for Tidebase — the open-source checkpoint layer for AI agents. Wrap your steps, and failed runs resume from the last safe point, in your own Postgres."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "BlueprintLab" }]
keywords = ["ai-agents", "checkpoint", "durable", "workflow", "postgres", "resume", "human-in-the-loop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://tidebase.dev"
Repository = "https://github.com/BlueprintLabIO/tidebase"
Documentation = "https://tidebase.dev/docs/"

[tool.hatch.build.targets.wheel]
packages = ["src/tidebase"]
